--- a/client/package.json
+++ b/client/package.json
@@ -6,16 +6,23 @@
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
+    "@types/cytoscape": "^3.14.14",
+    "@types/d3": "^6.3.0",
     "@types/jest": "^26.0.23",
     "@types/lodash": "^4.14.168",
     "@types/node": "^12.20.11",
     "@types/react": "^17.0.4",
+    "@types/react-d3-graph": "^2.3.5",
     "@types/react-dom": "^17.0.3",
     "@types/react-router-dom": "^5.1.7",
     "bootstrap": "^4.6.0",
+    "cytoscape": "^3.18.2",
+    "cytoscape-cola": "^2.4.0",
+    "d3": "^6.7.0",
     "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-bootstrap": "^1.5.2",
+    "react-d3-graph": "^2.6.0",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
