--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "@types/mongodb": "^3.6.3",
     "@types/morgan": "^1.9.2",
     "@types/multer": "^1.4.5",
+    "@types/yargs": "^17.0.2",
     "aws-sdk": "^2.831.0",
     "csv-parser": "^3.0.0",
     "dotenv": "^8.2.0",
@@ -30,7 +31,8 @@
     "multer": "^1.4.2",
     "ts-node": "^9.1.1",
     "typescript": "^4.1.3",
-    "xlsx": "^0.16.9"
+    "xlsx": "^0.16.9",
+    "yargs": "^17.1.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.6"
