--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,8 @@
     "@types/react-dom": "^17.0.3",
     "@types/react-router-dom": "^5.1.7",
     "bootstrap": "^4.6.0",
+    "cytoscape": "^3.19.1",
+    "cytoscape-fcose": "^2.1.0",
     "d3": "^7.0.1",
     "konva": "^8.1.3",
     "lodash": "^4.17.21",
@@ -55,5 +57,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/cytoscape": "^3.14.17"
   }
 }
