--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -7,5 +7,8 @@
     "lib": ["esnext"],
     "esModuleInterop": true,
     "resolveJsonModule": true
+  },
+  "ts-node": {
+    "maxOldSpaceSize": 8196
   }
 }
