--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "bootstrap": "^4.6.0",
     "cytoscape": "^3.19.1",
     "cytoscape-fcose": "^2.1.0",
+    "@types/cytoscape": "^3.14.17",
     "d3": "^7.0.1",
     "konva": "^8.1.3",
     "lodash": "^4.17.21",
@@ -57,8 +58,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "@types/cytoscape": "^3.14.17"
   }
 }
