--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Web app for å finne aksjeselskaper og aksjonærer.",
   "main": "server/src/index.ts",
   "scripts": {
-    "heroku-prebuild": "npm i && cd client && npm i && npm run build && cd .. && cd server && npm i && tsc"
+    "heroku-prebuild": "npm i && cd client && npm i && npm run build && cd .. && cd server && npm i && tsc",
+    "heroku-postinstall": "cd client && npm i"
   },
   "author": "Teodor Nilseng Danielsen",
   "license": "ISC",
