--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server/src/index.ts",
   "scripts": {
     "heroku-prebuild": "npm i && cd client && npm i && npm run build && cd .. && cd server && npm i && tsc",
-    "heroku-postinstall": "cd client && npm i"
+    "heroku-postinstall": "cd client && npm i --save-dev"
   },
   "author": "Teodor Nilseng Danielsen",
   "license": "ISC",
