--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-jwt": "^6.0.0",
+    "express-validator": "^6.12.2",
     "heroku-ssl-redirect": "^0.1.1",
     "jwks-rsa": "^1.12.2",
     "lodash": "^4.17.21",
@@ -31,7 +32,7 @@
     "multer": "^1.4.2",
     "ts-node": "^9.1.1",
     "typescript": "^4.1.3",
-    "xlsx": "^0.16.9",
+    "xlsx": "^0.17.2",
     "yargs": "^17.1.1"
   },
   "devDependencies": {
