--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@types/express": "^4.17.9",
     "@types/express-jwt": "0.0.42",
+    "@types/ioredis": "^4.28.1",
     "@types/lodash": "^4.14.172",
     "@types/mongodb": "^3.6.3",
     "@types/morgan": "^1.9.2",
@@ -25,6 +26,7 @@
     "express-jwt": "^6.0.0",
     "express-validator": "^6.12.2",
     "heroku-ssl-redirect": "^0.1.1",
+    "ioredis": "^4.28.0",
     "jwks-rsa": "^1.12.2",
     "lodash": "^4.17.21",
     "mongodb": "^3.6.3",
