--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "@types/multer": "^1.4.5",
     "@types/yargs": "^17.0.2",
     "aws-sdk": "^2.831.0",
+    "axios": "^0.24.0",
     "csv-parser": "^3.0.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
