--- a/client/package.json
+++ b/client/package.json
@@ -35,6 +35,7 @@
     "web-vitals": "^1.1.1"
   },
   "scripts": {
+    "start:external": "HOST=teo.local react-scripts start",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
