--- a/client/package.json
+++ b/client/package.json
@@ -21,7 +21,7 @@
     "bootstrap": "^4.6.0",
     "cytoscape": "^3.19.1",
     "cytoscape-fcose": "^2.1.0",
-    "d3": "^7.2.1",
+    "d3": "^7.3.0",
     "konva": "^8.1.3",
     "lodash": "^4.17.21",
     "react": "^17.0.2",
@@ -29,7 +29,7 @@
     "react-dom": "^17.0.2",
     "react-konva": "^17.0.2-5",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "5.0.0",
     "sass": "^1.38.1",
     "typescript": "^4.2.4",
     "web-vitals": "^1.1.1"
@@ -38,7 +38,8 @@
     "start:external": "HOST=teo.local react-scripts start",
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test:all": "react-scripts test --watchAll --transformIgnorePatterns 'node_modules/(?!(d3.*|internmap|delaunator|robust-predicates)/)'",
+    "test": "react-scripts test --transformIgnorePatterns 'node_modules/(?!(d3.*|internmap|delaunator|robust-predicates)/)'",
     "eject": "react-scripts eject"
   },
   "proxy": "http://localhost:4000",
