--- a/client/package.json
+++ b/client/package.json
@@ -30,6 +30,7 @@
     "react-konva": "^17.0.2-5",
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.0",
+    "react-toastify": "^8.2.0",
     "sass": "^1.38.1",
     "typescript": "^4.2.4",
     "web-vitals": "^1.1.1"
@@ -42,7 +43,9 @@
     "eject": "react-scripts eject"
   },
   "jest": {
-    "transformIgnorePatterns": ["node_modules/(?!(d3.*|internmap|delaunator|robust-predicates)/)"]
+    "transformIgnorePatterns": [
+      "node_modules/(?!(d3.*|internmap|delaunator|robust-predicates)/)"
+    ]
   },
   "proxy": "http://localhost:4000",
   "eslintConfig": {
