--- a/client/package.json
+++ b/client/package.json
@@ -32,6 +32,7 @@
     "react-scripts": "5.0.0",
     "react-toastify": "^8.2.0",
     "sass": "^1.38.1",
+    "schema": "file:../schema",
     "typescript": "^4.2.4",
     "web-vitals": "^1.1.1"
   },
