--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@types/d3": "^7.0.0",
     "@types/jest": "^26.0.23",
     "@types/lodash": "^4.14.168",
+    "@types/mapbox-gl": "^2.7.10",
     "@types/node": "^12.20.11",
     "@types/react": "^17.0.4",
     "@types/react-dom": "^17.0.3",
@@ -24,6 +25,7 @@
     "d3": "^7.3.0",
     "konva": "^8.1.3",
     "lodash": "^4.17.21",
+    "mapbox-gl": "^2.12.1",
     "react": "^17.0.2",
     "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.2",
