--- a/server/package.json
+++ b/server/package.json
@@ -33,6 +33,7 @@
     "mongodb": "^3.6.3",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
+    "node-cron": "^3.0.2",
     "ts-node": "^9.1.1",
     "typescript": "^4.1.3",
     "xlsx": "^0.17.2",
