--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "@types/mongodb": "^3.6.3",
     "@types/morgan": "^1.9.2",
     "@types/multer": "^1.4.5",
+    "@types/node-cron": "^3.0.7",
     "@types/yargs": "^17.0.2",
     "axios": "^0.24.0",
     "csv-parser": "^3.0.0",
