--- a/server/package.json
+++ b/server/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "npx ts-node src/index.ts",
     "start:dev": "nodemon",
+    "build:import": "npx tsc && node dist/index.js --import",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
