--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "npx ts-node src/index.ts",
     "start:dev": "nodemon",
-    "build:import": "npx tsc && node dist/index.js --import",
+    "start:prod": "npx tsc && node dist/index.js",
+    "start:import": "npx tsc && node dist/index.js --import",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
