--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "@types/express": "^4.17.9",
     "@types/express-jwt": "0.0.42",
     "@types/ioredis": "^4.28.1",
+    "@types/jsonstream": "^0.8.31",
     "@types/lodash": "^4.14.172",
     "@types/mongodb": "^3.6.3",
     "@types/morgan": "^1.9.2",
@@ -29,6 +30,7 @@
     "express-validator": "^6.12.2",
     "heroku-ssl-redirect": "^0.1.1",
     "ioredis": "^4.28.0",
+    "JSONStream": "^1.3.5",
     "lodash": "^4.17.21",
     "mongodb": "^3.6.3",
     "morgan": "^1.10.0",
