build: starting setup of aws infrastructure for neo4j

--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,8 @@ yarn-error.log*
 .eslintcache
 /client/.eslintcache
 /server/.eslintcache
+
+terraform.tfstate
+terraform.tfstate.backup
+.terraform.lock.hcl
+.terraform
