--- a/client/package.json
+++ b/client/package.json
@@ -18,17 +18,16 @@
     "@types/react": "^17.0.4",
     "@types/react-dom": "^17.0.3",
     "@types/react-router-dom": "^5.1.7",
-    "bootstrap": "^4.6.0",
     "d3": "^7.3.0",
     "lodash": "^4.17.21",
     "react": "^17.0.2",
-    "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.2",
     "react-redux": "^8.0.5",
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.0",
     "react-toastify": "^8.2.0",
     "sass": "^1.38.1",
+    "tailwindcss": "^3.3.2",
     "typescript": "^4.2.4",
     "web-vitals": "^1.1.1"
   },
