--- a/client/package.json
+++ b/client/package.json
@@ -8,11 +8,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.15",
     "@reduxjs/toolkit": "^1.9.5",
-    "@testing-library/jest-dom": "^5.12.0",
-    "@testing-library/react": "^11.2.6",
-    "@testing-library/user-event": "^12.8.3",
     "@types/d3": "^7.0.0",
-    "@types/jest": "^26.0.23",
     "@types/lodash": "^4.14.168",
     "@types/node": "^12.20.11",
     "@types/react": "^17.0.4",
@@ -38,16 +34,10 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "jest": {
-    "transformIgnorePatterns": [
-      "node_modules/(?!(d3.*|internmap|delaunator|robust-predicates)/)"
-    ]
-  },
   "proxy": "http://localhost:4000",
   "eslintConfig": {
     "extends": [
-      "react-app",
-      "react-app/jest"
+      "react-app"
     ]
   },
   "browserslist": {
