--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Teodor Nilseng Danielsen",
   "license": "ISC",
   "dependencies": {
+    "@sentry/cli": "^2.21.2",
     "typescript": "^4.1.3"
   }
 }
