--- a/client/package.json
+++ b/client/package.json
@@ -30,11 +30,10 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build && npm run sentry:sourcemaps",
+    "build": "react-scripts build",
     "test:all": "react-scripts test --watchAll",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "sentry:sourcemaps": "sentry-cli sourcemaps inject --org pureokrs-as --project javascript-react ./build && sentry-cli sourcemaps upload --org pureokrs-as --project javascript-react ./build"
+    "eject": "react-scripts eject"
   },
   "proxy": "http://localhost:4000",
   "eslintConfig": {
