--- a/server/package.json
+++ b/server/package.json
@@ -7,6 +7,7 @@
     "start": "npx ts-node src/index.ts",
     "start:dev": "nodemon",
     "start:prod": "npx tsc && node dist/index.js",
+    "start:prod:large": "npx tsc && node --max-old-space-size=8192 dist/index.js",
     "start:import": "npx tsc && node dist/index.js --import",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
