--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,7 @@
     "@types/node-cron": "^3.0.7",
     "@types/yargs": "^17.0.2",
     "axios": "^0.24.0",
+    "cors": "^2.8.5",
     "csv-parser": "^3.0.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
@@ -38,6 +39,7 @@
     "yargs": "^17.1.1"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "nodemon": "^2.0.6"
   },
   "nodemonConfig": {
