--- a/server/package.json
+++ b/server/package.json
@@ -8,7 +8,11 @@
     "start:dev": "nodemon",
     "start:prod": "npx tsc && node dist/index.js",
     "start:prod:large": "npx tsc && node --max-old-space-size=8192 dist/index.js",
-    "start:import": "npx tsc && node --max-old-space-size=8192 dist/index.js --import --year=<year> --data=ownerships companies shareholders",
+    "import": "npx tsc && node --max-old-space-size=8192 dist/index.js --import --year",
+    "import:full": "npx tsc && node --max-old-space-size=8192 dist/index.js --import --year",
+    "import:mongodb": "npx tsc && node --max-old-space-size=8192 dist/index.js --import --year --importToMongoDB=true --runTransformation=false --importToGraph=false",
+    "import:transform": "npx tsc && node --max-old-space-size=8192 dist/index.js --import --year --importToMongoDB=false --runTransformation=true --importToGraph=false",
+    "import:graph": "npx tsc && node --max-old-space-size=8192 dist/index.js --import --year --importToMongoDB=false --runTransformation=false --importToGraph=true",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
