chore: handles positional args in import cli

--- a/server/package.json
+++ b/server/package.json
@@ -8,11 +8,11 @@
     "start:dev": "nodemon",
     "start:prod": "npx tsc && node dist/index.js",
     "start:prod:large": "npx tsc && node --max-old-space-size=8192 dist/index.js",
-    "import": "npx tsc && node --max-old-space-size=8192 dist/importCli.js --year",
-    "import:full": "npx tsc && node --max-old-space-size=8192 dist/importCli.js --year",
-    "import:mongodb": "npx tsc && node --max-old-space-size=8192 dist/importCli.js --year --importToMongoDB=true --runTransformation=false --importToGraph=false",
-    "import:transform": "npx tsc && node --max-old-space-size=8192 dist/importCli.js --year --importToMongoDB=false --runTransformation=true --importToGraph=false",
-    "import:graph": "npx tsc && node --max-old-space-size=8192 dist/importCli.js --year --importToMongoDB=false --runTransformation=false --importToGraph=true",
+    "import": "npx tsc && node --max-old-space-size=8192 dist/importCli.js",
+    "import:full": "npx tsc && node --max-old-space-size=8192 dist/importCli.js",
+    "import:mongodb": "npx tsc && node --max-old-space-size=8192 dist/importCli.js --importToMongoDB=true --runTransformation=false --importToGraph=false",
+    "import:transform": "npx tsc && node --max-old-space-size=8192 dist/importCli.js --importToMongoDB=false --runTransformation=true --importToGraph=false",
+    "import:graph": "npx tsc && node --max-old-space-size=8192 dist/importCli.js --importToMongoDB=false --runTransformation=false --importToGraph=true",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
